# libjson-rpc-cpp

./: AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
cmake/: CMakeDependencies.cmake  CMakePackaging.cmake  libjson-rpc-cpp-skaleConfig.cmake.in  libjson-rpc-skale-cppConfig.cmake.in  libjsonrpccppskale-client.pc.cmake  libjsonrpccppskale-common.pc.cmake  libjsonrpccppskale-server.pc.cmake  libjsonrpccppskale-stub.pc.cmake
dev/artwork/: overview.dia
doc/: doxyfile.in  manpage.in
docker/: build_test_install.sh
src/examples/: CMakeLists.txt  filedescriptorclient.cpp  filedescriptorserver.cpp  index.html  redisclient.cpp  redisserver.cpp  simpleclient.cpp  simpleserver.cpp  stubclient.cpp  stubserver.cpp  tcpsocketclient.cpp  tcpsocketserver.cpp  unixdomainsocketclient.cpp  unixdomainsocketserver.cpp  xbmcremote.cpp
src/jsonrpccpp/client/connectors/: httpclient.cpp  httpclient.h
src/jsonrpccpp/server/connectors/: httpserver.cpp  httpserver.h
src/jsonrpccppskale/: CMakeLists.txt  client.h  server.h  version.h.in
src/jsonrpccppskale/client/: batchcall.cpp  batchcall.h  batchresponse.cpp  batchresponse.h  client.cpp  client.h  iclientconnector.h  rpcprotocolclient.cpp  rpcprotocolclient.h
src/jsonrpccppskale/client/connectors/: filedescriptorclient.cpp  filedescriptorclient.h  httpclient.cpp  httpclient.h  linuxtcpsocketclient.cpp  linuxtcpsocketclient.h  redisclient.cpp  redisclient.h  tcpsocketclient.cpp  tcpsocketclient.h  unixdomainsocketclient.cpp  unixdomainsocketclient.h  windowstcpsocketclient.cpp  windowstcpsocketclient.h
src/jsonrpccppskale/common/: errors.cpp  errors.h  exception.cpp  exception.h  jsonparser.h.in  procedure.cpp  procedure.h  specification.h  specificationparser.cpp  specificationparser.h  specificationwriter.cpp  specificationwriter.h  streamreader.cpp  streamreader.h  streamwriter.cpp  streamwriter.h
src/jsonrpccppskale/server/: abstractprotocolhandler.cpp  abstractprotocolhandler.h  abstractserver.h  abstractserverconnector.cpp  abstractserverconnector.h  abstractthreadedserver.cpp  abstractthreadedserver.h  iclientconnectionhandler.h  iprocedureinvokationhandler.h  requesthandlerfactory.cpp  requesthandlerfactory.h  rpcprotocolserver12.cpp  rpcprotocolserver12.h  rpcprotocolserverv1.cpp  rpcprotocolserverv1.h  rpcprotocolserverv2.cpp  rpcprotocolserverv2.h  threadpool.h
src/jsonrpccppskale/server/connectors/: filedescriptorserver.cpp  filedescriptorserver.h  httpserver.cpp  httpserver.h  linuxtcpsocketserver.cpp  linuxtcpsocketserver.h  redisserver.cpp  redisserver.h  tcpsocketserver.cpp  tcpsocketserver.h  unixdomainsocketserver.cpp  unixdomainsocketserver.h  windowstcpsocketserver.cpp  windowstcpsocketserver.h
src/stubgenerator/: CMakeLists.txt  codegenerator.cpp  codegenerator.h  main.cpp  servertemplate.h  stubgenerator.cpp  stubgenerator.h  stubgeneratorfactory.cpp  stubgeneratorfactory.h  stubhelper.h
src/stubgenerator/client/: cppclientstubgenerator.cpp  cppclientstubgenerator.h  jsclientstubgenerator.cpp  jsclientstubgenerator.h  pyclientstubgenerator.cpp  pyclientstubgenerator.h
src/stubgenerator/helper/: cpphelper.cpp  cpphelper.h
src/stubgenerator/server/: cppserverstubgenerator.cpp  cppserverstubgenerator.h
src/test/: CMakeLists.txt  checkexception.h  main.cpp  mockclientconnectionhandler.cpp  mockclientconnectionhandler.h  mockclientconnector.cpp  mockclientconnector.h  mockserverconnector.cpp  mockserverconnector.h  test_client.cpp  test_common.cpp  test_connector_filedescriptor.cpp  test_connector_http.cpp  test_connector_redis.cpp  test_connector_tcpsocket.cpp  test_connector_unixdomainsocket.cpp  test_integration.cpp  test_server.cpp  test_stubgenerator.cpp  testhttpserver.cpp  testhttpserver.h  testredisserver.cpp  testredisserver.h  testserver.cpp  testserver.h
